--- a/src/app/components/visual-demo/visual-demo.component.scss
+++ b/src/app/components/visual-demo/visual-demo.component.scss
@@ -93,7 +93,6 @@ h3 {
       font-family: 'monospace';
       height: 100%;
       line-height: 1.3rem;
-      overflow-x: auto;
     }
   }
   .buttons {
